--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="empty2" />
     <string name="title_activity_relative_layout_exam">RelativeLayoutExamActivity</string>
     <string name="title_activity_table_layout">TableLayoutActivity</string>
+    <string name="title_activity_frame_layout">FrameLayoutActivity</string>
 </resources>
