도전01 한 화면에 두 개의 이미지뷰 배치하기 - 솔님 소스

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_relative_layout_exam">RelativeLayoutExamActivity</string>
     <string name="title_activity_table_layout">TableLayoutActivity</string>
     <string name="title_activity_frame_layout">FrameLayoutActivity</string>
+    <string name="title_activity_image_exam">ImageExamActivity</string>
 </resources>
