--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_activity_table_layout">TableLayoutActivity</string>
     <string name="title_activity_frame_layout">FrameLayoutActivity</string>
     <string name="title_activity_image_exam">ImageExamActivity</string>
+    <string name="title_activity_edit_text">EditTextActivity</string>
 </resources>
