도전02. SMS 입력 화면 만들고 글자수 표시하기

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_frame_layout">FrameLayoutActivity</string>
     <string name="title_activity_image_exam">ImageExamActivity</string>
     <string name="title_activity_edit_text">EditTextActivity</string>
+    <string name="title_activity_sms">SMSActivity</string>
 </resources>
