도전04. 영업관리 앱용 화면 만들기

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="title_activity_activity_exam">ActivityExamActivity</string>
     <string name="title_activity_target">TargetActivity</string>
     <string name="title_activity_event">EventActivity</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_sub">SubActivity</string>
 </resources>
