도전.06 웹브라우저 화면 구성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_sub">SubActivity</string>
     <string name="title_activity_mission05_main">Mission05MainActivity</string>
+    <string name="title_activity_mission06_main">Mission06MainActivity</string>
 </resources>
