--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="title_activity_sub">SubActivity</string>
     <string name="title_activity_mission05_main">Mission05MainActivity</string>
     <string name="title_activity_mission06_main">Mission06MainActivity</string>
+    <string name="title_activity_list_view_exam01">ListViewExam01Activity</string>
 </resources>
