--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="title_activity_mission06_main">Mission06MainActivity</string>
     <string name="title_activity_list_view_exam01">ListViewExam01Activity</string>
     <string name="title_activity_spinner">SpinnerActivity</string>
+    <string name="title_activity_grid">GridActivity</string>
 </resources>
