--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="title_activity_list_view_exam01">ListViewExam01Activity</string>
     <string name="title_activity_spinner">SpinnerActivity</string>
     <string name="title_activity_grid">GridActivity</string>
+    <string name="title_activity_calendar">CalendarActivity</string>
 </resources>
