로컬라이징 예제 - 기본, 일본어, 한국어 로 strings.xml 분리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="title_activity_spinner">SpinnerActivity</string>
     <string name="title_activity_grid">GridActivity</string>
     <string name="title_activity_calendar">CalendarActivity</string>
+    <string name="nextMonth">Next Month</string>
 </resources>
