--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="nextMonth">Next Month</string>
     <string name="title_activity_thread">ThreadActivity</string>
     <string name="title_activity_async_task">AsyncTaskActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
