--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="pauseButtonLabel">Pause</string>
     <string name="startButtonLabel">Start</string>
     <string name="title_activity_timer_service">TimerServiceActivity</string>
+    <string name="title_activity_broadcast">BroadcastActivity</string>
 </resources>
