JSON Parsing 예제 1차

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="startButtonLabel">Start</string>
     <string name="title_activity_timer_service">TimerServiceActivity</string>
     <string name="title_activity_broadcast">BroadcastActivity</string>
+    <string name="title_activity_parsing">ParsingActivity</string>
 </resources>
