--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="title_activity_timer_service">TimerServiceActivity</string>
     <string name="title_activity_broadcast">BroadcastActivity</string>
     <string name="title_activity_parsing">ParsingActivity</string>
+    <string name="title_activity_web_view">WebViewActivity</string>
 </resources>
