--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="title_activity_parsing">ParsingActivity</string>
     <string name="title_activity_web_view">WebViewActivity</string>
     <string name="title_activity_bitmap">BitmapActivity</string>
+    <string name="title_activity_graphic">GraphicActivity</string>
 </resources>
