--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="title_activity_graphic">GraphicActivity</string>
     <string name="title_activity_shared_preference">SharedPreferenceActivity</string>
     <string name="title_activity_file">FileActivity</string>
+    <string name="title_activity_db">DbActivity</string>
 </resources>
