--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="title_activity_file">FileActivity</string>
     <string name="title_activity_db">DbActivity</string>
     <string name="title_activity_remote_controller">RemoteControllerActivity</string>
+    <string name="title_activity_camera_intent">CameraIntentActivity</string>
 </resources>
