나만의 카메라 앱

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="title_activity_db">DbActivity</string>
     <string name="title_activity_remote_controller">RemoteControllerActivity</string>
     <string name="title_activity_camera_intent">CameraIntentActivity</string>
+    <string name="title_activity_camera_builtin">CameraBuiltinActivity</string>
 </resources>
