--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="title_activity_remote_controller">RemoteControllerActivity</string>
     <string name="title_activity_camera_intent">CameraIntentActivity</string>
     <string name="title_activity_camera_builtin">CameraBuiltinActivity</string>
+    <string name="title_activity_media_player">MediaPlayerActivity</string>
 </resources>
