- 나의 위치 정보 확인하기

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="title_activity_movie_list">MovieListActivity</string>
     <string name="title_activity_contact">ContactActivity</string>
     <string name="title_activity_file_manager">FileManagerActivity</string>
+    <string name="title_activity_location">LocationActivity</string>
 </resources>
