--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
 
     <string name="action_example">Example action</string>
     <string name="title_activity_view_pager">ViewPagerActivity</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
 </resources>
