--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,7 @@
     <string name="action_example">Example action</string>
     <string name="title_activity_view_pager">ViewPagerActivity</string>
     <string name="title_activity_navigation">NavigationActivity</string>
+
+    <!-- Facebook app id 여기 수정 할 부분 -->
+    <string name="facebook_app_id">849457751800109</string>
 </resources>
