--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="facebook_app_id">849457751800109</string>
     <string name="title_activity_ball_game">BallGameActivity</string>
     <string name="title_activity_speed">SpeedActivity</string>
+    <string name="title_activity_toolbar">ToolbarActivity</string>
 </resources>
